2005-11-29  David Harrison  <harrison@apple.com>

        Reviewed by John Sullivan.

        Test cases added: None.  Manual testing is way to awkward, and automated testing
        is not possible.  See following bug...
        <rdar://problem/4256882> Need automated testing support for accessibility APIs

        * khtml/html/html_formimpl.cpp:
        (DOM::HTMLGenericFormElementImpl::removedFromTree):
	Replace tab with spaces.  Remove braces from one line "if".
        * kwq/KWQAccObject.mm:
        (-[KWQAccObject detach]):
	Send unregisterUniqueIdForUIElement unconditionally, for safety.
        (-[KWQAccObject dealloc]):
	New.  Send [self detach] so KWQObject gets unregistered and other cleanup happens as well.
        (CreateCGColorIfDifferent):
	Replace tab with spaces.
        (-[KWQAccObject removeAccObjectID]):
	Early to prevent a crash if called on a detached KWQAccObject (i.e. m_renderer == 0).

2005-11-29  Vicki Murley  <vicki@apple.com>

	Changes by Mitz Pettel, reviewed by Maciej.

	- fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5829 (REGRESSION: cursor tracking and hit 
	testing in scrollable block don't take borders into account)

	* khtml/rendering/render_layer.cpp:
        (khtml::RenderLayer::hitTestLayer): don't add left and bottom borders when hit testing
	* manual-tests/scrollbar-hittest.html: Added.

2005-11-29  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?5683
          add code so we can use CFURL instead of NSURL for speed

        * kwq/KWQKURL.h: Added declaration of createCFURL function.
        * kwq/KWQKURL.mm:
        (KURL::createCFURL): Moved body of getNSURL in here.
        (KURL::getNSURL): Changed to createCFURL.

2005-11-29  Darin Adler  <darin@apple.com>

        - fixed broken tree (from my last check-in)

        * kwq/DOM-CSS.mm: Added "using namespace DOM" and an import of "dom_docimpl.h".

2005-11-29  Darin Adler  <darin@apple.com>
