@@ -114,7 +114,25 @@ void SVGElementImpl::parseMappedAttribute(KDOM::MappedAttributeImpl *attr)
     }
     else
 #endif
-    KDOM::StyledElementImpl::parseMappedAttribute(attr);
+    // standard events
+    if (attr->name() == onclickAttr)
+        setHTMLEventListener(clickEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onmousedownAttr)
+        setHTMLEventListener(mousedownEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onmousemoveAttr)
+        setHTMLEventListener(mousemoveEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onmouseoutAttr)
+        setHTMLEventListener(mouseoutEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onmouseoverAttr)
+        setHTMLEventListener(mouseoverEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onmouseupAttr)
+        setHTMLEventListener(mouseupEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onfocusAttr)
+        setHTMLEventListener(DOMFocusInEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else if (attr->name() == onblurAttr)
+        setHTMLEventListener(DOMFocusOutEvent, getDocument()->createHTMLEventListener(attr->value().qstring(), this));
+    else
+        KDOM::StyledElementImpl::parseMappedAttribute(attr);
 }
 
 // vim:ts=4:noet
