@@ -1,3 +1,14 @@
+2005-11-29  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by darin.
+
+        Fixes W3C events tests, no additional tests necessary.
+        http://bugzilla.opendarwin.org/show_bug.cgi?id=5876
+
+        * ksvg2/css/svg.css: added namespace declaration
+        * ksvg2/svg/SVGElementImpl.cpp:
+        (SVGElementImpl::parseMappedAttribute): added support of on* attrs
+
 2005-11-29  David Harrison  <harrison@apple.com>
 
         Reviewed by John Sullivan.
